# ConChess

./: .gitignore  CMakeLists.txt  ConChess.cpp  ConChess.h
classes/: Board.cpp  Console.cpp  Game.cpp  Piece.cpp  Player.cpp  Slot.cpp
classes/special-pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  PossibleMove.cpp  Queen.cpp  Rook.cpp
headers/: Board.h  Console.h  Game.h  Piece.h  Player.h  Slot.h
headers/constants/: FieldDeltas.h  Fields.h  PieceIDs.h  PiecePoints.h  PieceSymbols.h  Pieces.h
headers/special-pieces/: Bishop.h  King.h  Knight.h  Pawn.h  PossibleMove.h  Queen.h  Rook.h
headers/utilities/: ClickData.h  Color.h  ConsoleButton.h  ConsoleEvent.h  ConsoleEventDataUnion.h  ConsoleEventType.h  Coords.h  KeyData.h  LetterNotation.h  PlayerStats.h
